done api documentation for fine module
