# storage/api-docs/api-docs.json
@@ -499,6 +499,110 @@
                 }
             }
         },
+        "/api/fines": {
+            "get": {
+                "tags": [
+                    "Fines"
+                ],
+                "summary": "Get a list of fines",
+                "operationId": "a0243cc10adda59ce9fadd7c0de79950",
+                "responses": {
+                    "200": {
+                        "description": "A list of fines",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/Fine"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/fines/{id}": {
+            "get": {
+                "tags": [
+                    "Fines"
+                ],
+                "summary": "Get a fine by ID",
+                "operationId": "3f0386eea32d854a65dd3ab3926155b3",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Fine ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Fine details",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Fine"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/borrow-records/{borrowRecord}/calculate-fine": {
+            "post": {
+                "tags": [
+                    "Fines"
+                ],
+                "summary": "Calculate a fine for a borrow record",
+                "operationId": "366058dbf549b5c4aa535edd6782adae",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Borrow Record ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Fine calculated",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Fine"
+                                }
+                            }
+                        }
+                    },
+                    "200": {
+                        "description": "No fine applicable",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "No fine applicable"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/users": {
             "get": {
                 "tags": [
@@ -794,6 +898,41 @@
                 },
                 "type": "object"
             },
+            "Fine": {
+                "properties": {
+                    "id": {
+                        "description": "Fine ID",
+                        "type": "integer"
+                    },
+                    "user_id": {
+                        "description": "User ID",
+                        "type": "integer"
+                    },
+                    "borrow_record_id": {
+                        "description": "Borrow Record ID",
+                        "type": "integer"
+                    },
+                    "amount": {
+                        "description": "Amount of fine",
+                        "type": "number",
+                        "format": "float"
+                    },
+                    "paid": {
+                        "description": "Paid status",
+                        "type": "boolean"
+                    }
+                },
+                "type": "object"
+            },
+            "FinePayment": {
+                "properties": {
+                    "paid": {
+                        "description": "Payment status",
+                        "type": "boolean"
+                    }
+                },
+                "type": "object"
+            },
             "User": {
                 "properties": {
                     "id": {
@@ -851,6 +990,10 @@
         {
             "name": "BorrowRecord",
             "description": "BorrowRecord"
+        },
+        {
+            "name": "Fines",
+            "description": "Fines"
         },
         {
             "name": "Users",
